--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react-redux": "^7.1.7",
+    "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "reactstrap": "^8.4.1",
@@ -50,6 +52,7 @@
   "devDependencies": {
     "@types/react": "^16.9.21",
     "@types/react-dom": "^16.9.5",
+    "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.3",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.1",
