--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@redux-saga/types": "^1.1.0",
     "@types/react": "^16.9.21",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-bootstrap": "^0.24.5",
