--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react-redux": "^7.1.7",
+    "@types/redux-logger": "^3.0.7",
     "bootstrap": "^4.4.1",
     "google-protobuf": "^3.11.4",
     "grpc-web": "^1.0.7",
@@ -25,6 +26,7 @@
     "react-scripts": "3.4.0",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "typescript-fsa": "^3.0.0",
     "typescript-fsa-reducers": "^1.2.1",
