--- a/backend/envoy.yaml
+++ b/backend/envoy.yaml
@@ -28,7 +28,7 @@ static_resources:
                   allow_methods: GET, PUT, DELETE, POST, OPTIONS
                   max_age: "1728000"
                   expose_headers: custom-header-1,grpc-status,grpc-message
-                  allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
+                  allow_headers: authorization, keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
             http_filters:
             - name: envoy.grpc_web
             - name: envoy.cors
