--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,3 @@
-FROM envoyproxy/envoy:latest
+FROM envoyproxy/envoy:v1.13.1
 COPY ./envoy.yaml /etc/envoy/envoy.yaml
 CMD /usr/local/bin/envoy -c /etc/envoy/envoy.yaml
