--- a/backend/envoy.yaml
+++ b/backend/envoy.yaml
@@ -20,11 +20,15 @@ static_resources:
               - name: local_service
                 domains: ["*"]
                 routes:
-                - match: { prefix: "/" }
-                  route: { cluster: echo_service }
+                - match: 
+                    prefix: "/"
+                  route: 
+                    cluster: echo_service
                 cors:
-                  allow_origin:
-                  - "*"
+                  allow_origin_string_match:
+                    - safe_regex:
+                        google_re2: {}
+                        regex: \*
                   allow_methods: GET, PUT, DELETE, POST, OPTIONS
                   max_age: "1728000"
                   expose_headers: custom-header-1,grpc-status,grpc-message
