--- a/backend/envoy.yaml
+++ b/backend/envoy.yaml
@@ -21,20 +21,18 @@ static_resources:
                 domains: ["*"]
                 routes:
                 - match: 
-                    prefix: "/"
+                    prefix: /
                   route: 
                     cluster: echo_service
-                cors:
-                  allow_origin_string_match:
-                    - safe_regex:
-                        google_re2: {}
-                        regex: \*
-                  allow_methods: GET, PUT, DELETE, POST, OPTIONS
-                  max_age: "1728000"
-                  expose_headers: custom-header-1,grpc-status,grpc-message
-                  allow_headers: authorization, keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
+                    cors:
+                      allow_credentials: true
+                      allow_origin_string_match:
+                        - exact: http://localhost:3000
+                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
+                      max_age: "1728000"
+                      expose_headers: custom-header-1,grpc-status,grpc-message
+                      allow_headers: authorization, keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
             http_filters:
-            - name: envoy.filters.http.jwt_authn
             - name: envoy.grpc_web
             - name: envoy.cors
             - name: envoy.router
@@ -45,3 +43,12 @@ static_resources:
       http2_protocol_options: {}
       lb_policy: round_robin
       hosts: [{ socket_address: { address: localhost, port_value: 9090 }}]
+    - name: auth0_cluster
+      type: LOGICAL_DNS
+      dns_lookup_family: V4_ONLY
+      connect_timeout: 2s
+      lb_policy: ROUND_ROBIN
+      hosts:
+      - socket_address:
+          address: dev-ag9zx3un.auth0.com
+          port_value: 443
