--- a/package.json
+++ b/package.json
@@ -60,10 +60,14 @@
   },
   "devDependencies": {
     "@redux-saga/types": "^1.1.0",
+    "@storybook/react": "^5.3.14",
     "@types/react": "^16.9.21",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/storybook__react": "^5.2.1",
+    "path": "^0.12.7",
+    "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5"
